# bartender

./: docker-compose.yml  example.env  manage.py  pyproject.toml  start.sh
bartender/: global_access_conditions.py  mixins.py  permissions.py  settings.py  urls.py  util.py  view_mixins.py  wsgi.py
bartender/drinks/: admin.py  api.py  generators.py  models.py  permissions.py  serializers.py  signals.py  views.py
bartender/drinks/migrations/: 0001_initial.py  0002_auto_20210115_0037.py  0003_auto_20210115_0045.py  0004_crate_billed_at.py  0005_crate_billed_document.py
bartender/users/: admin.py  api.py  exceptions.py  generators.py  models.py  permissions.py  serializers.py  views.py
bartender/users/migrations/: 0002_auto_20210114_2327.py  0003_auto_20210115_0003.py  0004_invite_created_by.py  0005_auto_20210115_0008.py  0006_auto_20210115_0208.py  0007_auto_20210117_1948.py
templates/rest_framework/: base.html
