[tool]
[tool.poetry]
name = "bartender"
description = "Bartender is an app for tracking drink consumption in a shared flat"
version = "0.0.0"
authors = ["Daniel Malik <mail@fronbasal.de>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.5"
dj-database-url = "^0.5.0"
django-configurations = "^2.2"
django-debug-toolbar = "^3.2"
django-extensions = "^3.1.0"
django-filter = "^2.4.0"
djangorestframework = "^3.12.2"
gunicorn = "^20.0.4"
markdown = "^3.3.3"
psycopg2-binary = "^2.8.6"
whitenoise = "^5.2.0"
django-money = "^1.3"
drf-generators = "^0.5.0"
drf-access-policy = "^0.8.1"
drf-extensions = {git = "https://github.com/chibisov/drf-extensions.git"}
django-storages = "^1.11.1"
requests = "^2.25.1"
boto3 = "^1.16.55"

[tool.poetry.dev-dependencies]
werkzeug = "*"
ipython = "*"
